<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetLocationActivity">

    <TextView
        android:id="@+id/instructionLabel"
        android:layout_width="353dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/instructionLabel"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="48dp"
        android:text="@string/instructionText"
        app:layout_constraintBottom_toTopOf="@+id/savedPoint"
        app:layout_constraintEnd_toEndOf="@+id/instructionLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/instructionLabel"
        app:layout_constraintTop_toBottomOf="@+id/instructionLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/savedPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/no_point"
        android:textColor="@color/accentLight"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/get_location_button"
        app:layout_constraintEnd_toEndOf="@+id/get_location_button"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/get_location_button" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@color/textColor"
        android:onClick="getCurrentLocation"
        android:text="@string/get_location_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionLabel" />

    <Button
        android:id="@+id/start_navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/textColor"
        android:onClick="startNavigate"
        android:text="@string/start_navigate_button"
        app:layout_constraintEnd_toEndOf="@+id/get_location_button"
        app:layout_constraintStart_toStartOf="@+id/get_location_button"
        app:layout_constraintTop_toBottomOf="@+id/get_location_button" />

    <Button
        android:id="@+id/delete_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/accentDark"
        android:text="@string/delete_location_button"
        android:onClick="deleteLocation"
        app:layout_constraintEnd_toEndOf="@+id/get_location_button"
        app:layout_constraintStart_toStartOf="@+id/get_location_button"
        app:layout_constraintTop_toBottomOf="@+id/start_navigate_button" />
</androidx.constraintlayout.widget.ConstraintLayout>